--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@react-oauth/google": "^0.12.1",
     "node": "^22.7.0",
     "react": "^18.3.1",
