--- a/react-student-app/package.json
+++ b/react-student-app/package.json
@@ -13,6 +13,10 @@
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
     "@react-oauth/google": "^0.12.1",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "mysql": "^2.18.1",
+    "nodemon": "^3.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
