--- a/react-student-app/package.json
+++ b/react-student-app/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/x-charts": "^7.16.0",
     "@react-oauth/google": "^0.12.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
